--- a/index.html
+++ b/index.html
@@ -66,6 +66,18 @@
                   <!--ここからコピー-->
                   <li class="infodate">
                       <!-- 日付 -->
+                      2024/11/3
+                  </li>
+                  <li class="infobun">
+                      <!-- 内容 -->
+                      Scheduleを更新しました。
+                      <!-- ここまで内容。改行する時は<br>をつける。最後は<br>をつけない。-->
+                      <br>
+                  </li>
+                  <!--ここまでコピー-->
+                  <!--ここからコピー-->
+                  <li class="infodate">
+                      <!-- 日付 -->
                       2024/7/3
                   </li>
                   <li class="infobun">
@@ -73,8 +85,8 @@
                       E-mailアドレスが変更されました。<br>
                       お問い合わせは下記のアドレスにて受け付けております。<br>
                       E-mail : <a href="mailto:edelrotejazzorchester@gmail.com">edelrotejazzorchester@gmail.com</a>
-                          <!-- ここまで内容。改行する時は<br>をつける。最後は<br>をつけない。-->
-                          <br>
+                      <!-- ここまで内容。改行する時は<br>をつける。最後は<br>をつけない。-->
+                      <br>
                   </li>
                   <!--ここまでコピー-->
                   <!--ここからコピー-->
