--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -164,7 +164,7 @@
                   </td>
                   <td class="scheP">
                       <p>
-                          まんぷく名古屋対バン(Σ Spirits Jazz Societyさん) @JB.STUDIO ROUTE23 / JB HALL
+                          まんぷく名古屋対バン(vs.Σ Spirits Jazz Society) @JB.STUDIO ROUTE23 / JB HALL
                       </p>
                   </td>
               </tr>
@@ -200,7 +200,31 @@
                   </td>
                   <td class="scheP">
                       <p>
-                          4大学対バン @愛知学院大学百周年記念講堂
+                          愛知4大学対バン @愛知学院大学百周年記念講堂
+                      </p>
+                  </td>
+              </tr>
+              <!-- ここまでコピペ -->
+              <!-- ここから -->
+              <tr>
+                  <td class="scheDate">
+                      12月7日(土)<br>
+                  </td>
+                  <td class="scheP">
+                      <p>
+                          対バンvs.岐阜大学New Stars J.O. @ドリームシアター岐阜
+                      </p>
+                  </td>
+              </tr>
+              <!-- ここまでコピペ -->
+              <!-- ここから -->
+              <tr>
+                  <td class="scheDate">
+                      2月15日(土)<br>
+                  </td>
+                  <td class="scheP">
+                      <p>
+                          第59回定期演奏会 @愛知県芸術劇場小ホール
                       </p>
                   </td>
               </tr>
