--- a/index.html
+++ b/index.html
@@ -66,6 +66,21 @@
                   <!--ここからコピー-->
                   <li class="infodate">
                       <!-- 日付 -->
+                      2024/11/7
+                  </li>
+                  <li class="infobun">
+                      <!-- 内容 -->
+                      Scheduleを更新しました。<br>
+                      2025年2月15日に第59回定期演奏会を開催いたします。<br>
+                      愛知県芸術劇場小ホールにて、開場15:30、開演16:00を予定しております。<br>
+                      入場無料、予約不要ですので、たくさんの方のご来場をお待ちしております。
+                      <!-- ここまで内容。改行する時は<br>をつける。最後は<br>をつけない。-->
+                      <br>
+                  </li>
+                  <!--ここまでコピー-->
+                  <!--ここからコピー-->
+                  <li class="infodate">
+                      <!-- 日付 -->
                       2024/11/3
                   </li>
                   <li class="infobun">
@@ -430,10 +445,12 @@
             </a>
           </div>
           <div class="twitter">
-            <a href="https://twitter.com/Edel_Rote_Jazz_" target="_blank">
-              <i class="fab fa-twitter"></i>
-              <p>Twitter</p>
-            </a>
+              <a href="https://twitter.com/Edel_Rote_Jazz_" target="_blank">
+                  <a class="twitter-timeline" data-height="1500" href="https://twitter.com/Edel_Rote_Jazz_?ref_src=twsrc%5Etfw">Tweets by Edel_Rote_Jazz_</a>
+                  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                  <i class="fab fa-twitter"></i>
+                  <p>Twitter</p>
+              </a>
           </div>
           <div class="youtube">
             <a href="https://www.youtube.com/channel/UCQlsJ1CrDImOy-cpJhirERA" target="_blank">
