--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             
         </div>
         <div class="info2">
-            <a class="twitter-timeline" data-width="98%" data-height="100%" data-link-color="#830009" href="https://twitter.com/Edel_Rote_Jazz_?ref_src=twsrc%5Etfw">Tweets by Edel_Rote_Jazz_</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <a class="twitter-timeline" data-width="98%" data-height="550%" data-link-color="#830009" href="https://twitter.com/Edel_Rote_Jazz_?ref_src=twsrc%5Etfw">Tweets by Edel_Rote_Jazz_</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div> <!--info2-->
       </div>
 
@@ -424,14 +424,14 @@
               <!--YouTube動画を増やす場合はここからコピー-->
                 <li><div class="movie-item">
                     <!--YouTube埋め込みコードを貼り付け-->
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/KsKWPN-wSnA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/IpVpu2kO9E8?si=g84iQQrtgBPo6vG2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <!--YouTube埋め込みコードここまで-->
                 </div></li>
                 <!--ここまでコピー-->
-                <li><div class="movie-item"><iframe width="560" height="315" src="https://www.youtube.com/embed/NsreJI78UJA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><div></li>
-                <li><div class="movie-item"><iframe width="560" height="315" src="https://www.youtube.com/embed/fgZWFA8jIQI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><div></li>
-                <li><div class="movie-item"><iframe width="560" height="315" src="https://www.youtube.com/embed/o55Ujz-KtpA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><div></li>
-                <li><div class="movie-item"><iframe width="560" height="315" src="https://www.youtube.com/embed/UJRN9pcg6XQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><div></li>
+                <li><div class="movie-item"><iframe width="560" height="315" src="https://www.youtube.com/embed/A0_79nJ44Uc?si=ukrV_f7zjfl25uc-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><div></li>
+                <li><div class="movie-item"><iframe width="560" height="315" src="https://www.youtube.com/embed/Ou5srMuEU4o?si=Yac2-5fjPENSMrmn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><div></li>
+                <li><div class="movie-item"><iframe width="560" height="315" src="https://www.youtube.com/embed/c_v45lTTwSA?si=VTPucwDvOLROs1Vq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><div></li>
+                <li><div class="movie-item"><iframe width="560" height="315" src="https://www.youtube.com/embed/17IpV2sg7Ug?si=qEMHh8eqOwLQkElM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><div></li>
            </ul>
             
 
@@ -445,12 +445,10 @@
             </a>
           </div>
           <div class="twitter">
-              <a href="https://twitter.com/Edel_Rote_Jazz_" target="_blank">
-                  <a class="twitter-timeline" data-height="1500" href="https://twitter.com/Edel_Rote_Jazz_?ref_src=twsrc%5Etfw">Tweets by Edel_Rote_Jazz_</a>
-                  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                  <i class="fab fa-twitter"></i>
-                  <p>Twitter</p>
-              </a>
+            <a href="https://twitter.com/Edel_Rote_Jazz_" target="_blank">
+              <i class="fab fa-twitter"></i>
+              <p>Twitter</p>
+            </a>
           </div>
           <div class="youtube">
             <a href="https://www.youtube.com/channel/UCQlsJ1CrDImOy-cpJhirERA" target="_blank">
