--- a/link/link.html
+++ b/link/link.html
@@ -55,14 +55,14 @@
         <div class="linkD gakuseiband">
           <h3>学生バンド</h3>
           <p>
-            <a href="http://www4.hp-ez.com/hp/bsjo/page10" target="_blank">愛知大学 Blue Stars J.O.</a>　愛大ブルスタさん。<br>
+            <a href="http://www4.hp-ez.com/hp/bsjo/page10" target="_blank">愛知大学 Blue Stars J.O.</a>　愛大ブルスタさんのページ。<br>
             <a href="https://singingallstars2019.jimdofree.com/" target="_blank">愛知学院大学 Singing All Stars</a>　スイングさんのページ。<br>
             <a href="http://newstarsjazz.web.fc2.com/" target="_blank">岐阜大学 New Stars J.O.</a>　岐大ニュースタさんのページ。<br>
-            <a href="http://bb-orchestra.jimdo.com/" target="_blank">愛知淑徳大学 B&amp;B Orch.</a>　淑徳B&amp;Bさんのページです。<br>
-            <a href="http://afqnet.web.fc2.com/" target="_blank">名古屋工業大学第1部軽音楽部「A.F.Q」</a>　ご近所の軽音楽部です。<br>
+            <a href="http://bb-orchestra.jimdo.com/" target="_blank">愛知淑徳大学 B&amp;B Orch.</a>　淑徳B&amp;Bさんのページ。<br>
+            <a href="http://afqnet.web.fc2.com/" target="_blank">名古屋工業大学第1部軽音楽部「A.F.Q」</a>　ご近所の軽音楽部サンのページ。<br>
             <a href="http://nsjo35th.wix.com/nsjo" target="_blank">中部大学 Natural sounds J.O.</a>　中部大　ナチュラルサウンズさんのページ。<br>
             <a href="https://ounwjo.wix.com/the-nwjo" target="_blank">大阪大学 The New Wave J.O.</a><br>
-            <a href="https://midnighters0.wixsite.com/official" target="_blank">日本医科大学Midnight Sounds J.O.</a>　日医大ミッドナイトサウンズさん。<br>
+            <a href="https://midnighters0.wixsite.com/official" target="_blank">日本医科大学Midnight Sounds J.O.</a>　日医大ミッドナイトサウンズさんのページ。<br>
             <a href="http://edksso.web.fc2.com/" target="_blank">愛媛大学軽音楽部 Sound Solution Orch.</a>　愛大そりゅーさんのページ。<br>
             <a href="http://home.kobe-u.com/jazz/" target="_blank">神戸大学軽音楽部Jazz</a>　神戸大学さんのページ。<br>
             <a href="http://shindaijazzken.wixsite.com/shinanonojazz" target="_blank">信州大学Jazz研究会</a>　信州大学にあるJazz研さんのページ。<br>
@@ -116,7 +116,11 @@
             　ライブでお世話になりました。
             <br>
             <a href="https://www.imago-jazz.com/" target="_blank">ライブハウスImago</a>
-            　コンボ活動でお世話になりました。<br>
+            　コンボ活動でお世話になりました。
+            <br>
+            <a href="https://jb-studio.com/" target="_blank">JB.STUDIO</a>
+            　ライブでお世話になりました。
+            <br>
           </p>
         </div>
         <div class="linkD instrumentshop">
