--- a/about/about.html
+++ b/about/about.html
@@ -25,7 +25,7 @@
         <div class="aboutA">
           <h2 class="topText">About us</h2>
           <p>
-            　Edel Röte Jazz Orchester（通称：え～でる）は名古屋大学軽音楽部ジャズセクションに所属する団体でその名の通りビッグバンド形態のジャズの演奏を中心として活動しています
+            　Edel Röte Jazz Orchester（通称：え～でる）は名古屋大学軽音楽部ジャズセクションに所属する団体でその名の通りビッグバンド形態のジャズの演奏を中心として活動しています。
           </p>
           <div class="linkD aboutBigband">
             <h3>ビッグバンドとは</h3>
