--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -28,203 +28,11 @@
               <!-- ここから -->
               <tr>
                   <td class="scheDate">
-                      4月13日(土),24日(水)<br>
+                      4月16日(水),26日(土)<br>
                   </td>
                   <td class="scheP">
                       <p>
                           新入生歓迎インスタライブ @山の上音楽練習場
-                      </p>
-                  </td>
-              </tr>
-              <!-- ここまでコピペ -->
-              <!-- ここから -->
-              <tr>
-                  <td class="scheDate">
-                      5月11日(土)<br>
-                  </td>
-                  <td class="scheP">
-                      <p>
-                          津ぅのドまんなかジャズfestival @センターパレスホール
-                      </p>
-                  </td>
-              </tr>
-              <!-- ここまでコピペ -->
-              <!-- ここから -->
-              <tr>
-                  <td class="scheDate">
-                      6月5日(土)<br>
-                  </td>
-                  <td class="scheP">
-                      <p>
-                          大阪BIGBAND JAZZ FESTIVAL @服部緑地野外音楽堂
-                      </p>
-                  </td>
-              </tr>
-              <!-- ここまでコピペ -->
-              <!-- ここから -->
-              <tr>
-                  <td class="scheDate">
-                      6月16日(日)<br>
-                  </td>
-                  <td class="scheP">
-                      <p>
-                          BE HAPPY JAZZ FESTIVAL @パティオ池鯉鮒(知立市文化会館)
-                      </p>
-                  </td>
-              </tr>
-              <!-- ここまでコピペ -->
-              <!-- ここから -->
-              <tr>
-                  <td class="scheDate">
-                      6月22日(土)<br>
-                  </td>
-                  <td class="scheP">
-                      <p>
-                          対バンvs.静岡大学Jazz Phenomena @北文化小劇場
-                      </p>
-                  </td>
-              </tr>
-              <!-- ここまでコピペ -->
-              <!-- ここから -->
-              <tr>
-                  <td class="scheDate">
-                      7月27日(土)<br>
-                  </td>
-                  <td class="scheP">
-                      <p>
-                          Centrair Cool Jazz Festival @セントレア 第1ターミナル 4階 イベントプラザ
-                      </p>
-                  </td>
-              </tr>
-              <!-- ここまでコピペ -->
-              <!-- ここから -->
-              <tr>
-                  <td class="scheDate">
-                      8月17日(土),18日(日)<br>
-                  </td>
-                  <td class="scheP">
-                      <p>
-                          ヤマノ・ビッグバンド・ジャズ・コンテスト @カルッツかわさき ホール
-                      </p>
-                  </td>
-              </tr>
-              <!-- ここまでコピペ -->
-              <!-- ここから -->
-              <tr>
-                  <td class="scheDate">
-                      9月6日(金),7日(土)<br>
-                  </td>
-                  <td class="scheP">
-                      <p>
-                          国際ジャズオーケストラフェスティバル ステラジャム @河口湖ステラシアター
-                      </p>
-                  </td>
-              </tr>
-              <!-- ここまでコピペ -->
-              <!-- ここから -->
-              <tr>
-                  <td class="scheDate">
-                      9月14日(土)<br>
-                  </td>
-                  <td class="scheP">
-                      <p>
-                          Summer Concert @JB.STUDIO ROUTE23 / JB HALL
-                      </p>
-                  </td>
-              </tr>
-              <!-- ここまでコピペ -->
-              <!-- ここから -->
-              <tr>
-                  <td class="scheDate">
-                      9月16日(月)<br>
-                  </td>
-                  <td class="scheP">
-                      <p>
-                          今池ビッグバンドフェスティバル @今池ガスホール
-                      </p>
-                  </td>
-              </tr>
-              <!-- ここまでコピペ -->
-              <!-- ここから -->
-              <tr>
-                  <td class="scheDate">
-                      10月19日(土)<br>
-                  </td>
-                  <td class="scheP">
-                      <p>
-                          meidaiSAKEテラス @名古屋大学東山キャンパス豊田講堂前庭スペース
-                      </p>
-                  </td>
-              </tr>
-              <!-- ここまでコピペ -->
-              <!-- ここから -->
-              <tr>
-                  <td class="scheDate">
-                      10月26日(土)<br>
-                  </td>
-                  <td class="scheP">
-                      <p>
-                          まんぷく名古屋対バン(vs.Σ Spirits Jazz Society) @JB.STUDIO ROUTE23 / JB HALL
-                      </p>
-                  </td>
-              </tr>
-              <!-- ここまでコピペ -->
-              <!-- ここから -->
-              <tr>
-                  <td class="scheDate">
-                      11月2日(土)<br>
-                  </td>
-                  <td class="scheP">
-                      <p>
-                          メイカーズピア ジャズ&ダンスフェスタ @メイカーズピア
-                      </p>
-                  </td>
-              </tr>
-              <!-- ここまでコピペ -->
-              <!-- ここから -->
-              <tr>
-                  <td class="scheDate">
-                      11月23日(土)<br>
-                  </td>
-                  <td class="scheP">
-                      <p>
-                          ベイシー祭 @クラブ月世界
-                      </p>
-                  </td>
-              </tr>
-              <!-- ここまでコピペ -->
-              <!-- ここから -->
-              <tr>
-                  <td class="scheDate">
-                      11月30日(土)<br>
-                  </td>
-                  <td class="scheP">
-                      <p>
-                          愛知4大学対バン @愛知学院大学百周年記念講堂
-                      </p>
-                  </td>
-              </tr>
-              <!-- ここまでコピペ -->
-              <!-- ここから -->
-              <tr>
-                  <td class="scheDate">
-                      12月7日(土)<br>
-                  </td>
-                  <td class="scheP">
-                      <p>
-                          対バンvs.岐阜大学New Stars J.O. @ドリームシアター岐阜
-                      </p>
-                  </td>
-              </tr>
-              <!-- ここまでコピペ -->
-              <!-- ここから -->
-              <tr>
-                  <td class="scheDate">
-                      2025年2月15日(土)<br>
-                  </td>
-                  <td class="scheP">
-                      <p>
-                          第59回定期演奏会 @愛知県芸術劇場小ホール
                       </p>
                   </td>
               </tr>
@@ -235,6 +43,7 @@
         </div>
         <div class="oldSche">
           <h2 class="subText">過去の演奏会</h2>
+          <p class="schePast"><a href="2024.html">2024年度</a></p>
           <p class="schePast"><a href="2023.html">2023年度</a></p> 
           <p class="schePast"><a href="2022.html">2022年度</a></p>
           <p class="schePast"><a href="2021.html">2021年度</a></p>
