--- a/schedule/2013.html
+++ b/schedule/2013.html
@@ -27,7 +27,7 @@
 <body>
 
 		<!-- コンテンツフレーム本体 -->
-		<div class="subheading">2013年度活動予定</div>
+		<div class="subheading">2013年度活動記録</div>
 
 		<table class="schedule-table">
 			<tr>
