--- a/schedule/2014.html
+++ b/schedule/2014.html
@@ -26,7 +26,7 @@
 <body>
 
 		<!-- コンテンツフレーム本体 -->
-		<div class="subheading">2014年度活動予定</div>
+		<div class="subheading">2014年度活動記録</div>
 
 		<table class="schedule-table">
 			<tr>
