--- a/schedule/2018.html
+++ b/schedule/2018.html
@@ -25,7 +25,7 @@
 
 <body>
 		<!-- コンテンツフレーム本体 -->
-		<div class="subheading">2018年度活動予定</div>
+		<div class="subheading">2018年度活動記録</div>
 
 		<table class="schedule-table">
 			<tr>
