--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -32,7 +32,7 @@
                   </td>
                   <td class="scheP">
                       <p>
-                          新入生歓迎インスタライブ @山の上音楽練習場
+                          新入生歓迎ライブ @山の上音楽練習場
                       </p>
                   </td>
               </tr>
