--- a/index.html
+++ b/index.html
@@ -66,6 +66,18 @@
                   <!--ここからコピー-->
                   <li class="infodate">
                       <!-- 日付 -->
+                      2025/4/3
+                  </li>
+                  <li class="infobun">
+                      <!-- 内容 -->
+                      Scheduleを更新しました。
+                      <!-- ここまで内容。改行する時は<br>をつける。最後は<br>をつけない。-->
+                      <br>
+                  </li>
+                  <!--ここまでコピー-->
+                  <!--ここからコピー-->
+                  <li class="infodate">
+                      <!-- 日付 -->
                       2024/11/7
                   </li>
                   <li class="infobun">
