--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -37,6 +37,78 @@
                   </td>
               </tr>
               <!-- ここまでコピペ -->
+              <!-- ここから -->
+              <tr>
+                  <td class="scheDate">
+                      5月17日(土)<br>
+                  </td>
+                  <td class="scheP">
+                      <p>
+                          津ぅのドまんなかジャズフェスティバル @津センターパレスホール
+                      </p>
+                  </td>
+              </tr>
+              <!-- ここまでコピペ -->
+              <!-- ここから -->
+              <tr>
+                  <td class="scheDate">
+                      6月7日(土)<br>
+                  </td>
+                  <td class="scheP">
+                      <p>
+                          名大祭 @名古屋大学 東山キャンパス
+                      </p>
+                  </td>
+              </tr>
+              <!-- ここまでコピペ -->
+              <!-- ここから -->
+              <tr>
+                  <td class="scheDate">
+                      6月8日(日)<br>
+                  </td>
+                  <td class="scheP">
+                      <p>
+                          Be Happy Jazz Festival @パティオ池鯉鮒（知立市文化会館）
+                      </p>
+                  </td>
+              </tr>
+              <!-- ここまでコピペ -->
+              <!-- ここから -->
+              <tr>
+                  <td class="scheDate">
+                      6月22日(日)<br>
+                  </td>
+                  <td class="scheP">
+                      <p>
+                          大阪BIGBAND JAZZ FESTIVAL @大阪城音楽堂
+                      </p>
+                  </td>
+              </tr>
+              <!-- ここまでコピペ -->
+              <!-- ここから -->
+              <tr>
+                  <td class="scheDate">
+                      8月16日(土),17日(日)<br>
+                  </td>
+                  <td class="scheP">
+                      <p>
+                          YAMANO BIG BAND JAZZ CONTEST @カルッツかわさき ホール
+                      </p>
+                  </td>
+              </tr>
+              <!-- ここまでコピペ -->
+              <!-- ここから -->
+              <tr>
+                  <td class="scheDate">
+                      9月5日(金),6日(土)<br>
+                  </td>
+                  <td class="scheP">
+                      <p>
+                          国際ジャズオーケストラ・フェスティバル 〜ステラジャム〜 @河口湖ステラシアター
+                      </p>
+                  </td>
+              </tr>
+              <!-- ここまでコピペ -->
               </tr>
 
           </table>
