--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -88,6 +88,18 @@
               <!-- ここから -->
               <tr>
                   <td class="scheDate">
+                      7月12日(土)<br>
+                  </td>
+                  <td class="scheP">
+                      <p>
+                          セントレア空港音楽祭 Centrair Cool Jazz Festival @中部国際空港
+                      </p>
+                  </td>
+              </tr>
+              <!-- ここまでコピペ -->
+              <!-- ここから -->
+              <tr>
+                  <td class="scheDate">
                       8月16日(土),17日(日)<br>
                   </td>
                   <td class="scheP">
