update_memmbers.html2025

--- a/index.html
+++ b/index.html
@@ -66,6 +66,19 @@
                   <!--ここからコピー-->
                   <li class="infodate">
                       <!-- 日付 -->
+                      2025/6/23
+                  </li>
+                  <li class="infobun">
+                      <!-- 内容 -->
+                      Membersを更新しました。<br>
+                      今年も個性豊かなメンバーが仲間入りしました！
+                      <!-- ここまで内容。改行する時は<br>をつける。最後は<br>をつけない。-->
+                      <br>
+                  </li>
+                  <!--ここまでコピー-->
+                  <!--ここからコピー-->
+                  <li class="infodate">
+                      <!-- 日付 -->
                       2025/4/3
                   </li>
                   <li class="infobun">
@@ -417,7 +430,7 @@
 
       <div class="profile">
         <h2 class="topText">Profile</h2>
-        <img src="image/2024Top1.jpg" class="topImage">
+        <img src="image/2025Top1.jpg" class="topImage">
         <div class="ploD">
           <p class="ploP">
             私たちEdel Röte Jazz Orchester（通称：え～でる）は名古屋大学軽音楽部ジャズセクションに所属する団体で、ビッグバンド形態のジャズの演奏を中心として活動しています。<br>
