--- a/members/members.html
+++ b/members/members.html
@@ -22,8 +22,9 @@
     <div class="wrap">
       <div id="header"></div>
       <main class="main">
-        <img src="IMG_2023members.JPG" class="topImage">
+        <img src="IMG_2024members.JPG" class="topImage">
         <h2 class="topText">Members</h2>
+        <p class="memberPlofile"><a href="2025/index.html">2025年度(現役1年生)</a></p>
         <p class="memberPlofile"><a href="2024/index.html">2024年度(現役2年生)</a></p>
         <p class="memberPlofile"><a href="2023/index.html">2023年度(現役3年生)</a></p>
         <!-- OB and OG
