--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -121,6 +121,18 @@
                   </td>
               </tr>
               <!-- ここまでコピペ -->
+              <!-- ここから -->
+              <tr>
+                  <td class="scheDate">
+                      9月13日(土)<br>
+                  </td>
+                  <td class="scheP">
+                      <p>
+                          Summer Concert 2025 @B.STUDIO ROUTE23 / JB HALL
+                      </p>
+                  </td>
+              </tr>
+              <!-- ここまでコピペ -->
               </tr>
 
           </table>
