--- a/index.html
+++ b/index.html
@@ -469,10 +469,10 @@
               <p>Instagram</p>
             </a>
           </div>
-          <div class="twitter">
+          <div class="X(旧twitter)">
             <a href="https://twitter.com/Edel_Rote_Jazz_" target="_blank">
               <i class="fab fa-twitter"></i>
-              <p>Twitter</p>
+              <p>X(旧Twitter)</p>
             </a>
           </div>
           <div class="youtube">
