--- a/index.html
+++ b/index.html
@@ -469,10 +469,10 @@
               <p>Instagram</p>
             </a>
           </div>
-          <div class="X(旧twitter)">
+          <div class="X">
             <a href="https://twitter.com/Edel_Rote_Jazz_" target="_blank">
-              <i class="fab fa-twitter"></i>
-              <p>X(旧Twitter)</p>
+              <i class="fab fa-X"></i>
+              <p>X</p>
             </a>
           </div>
           <div class="youtube">
