correct index.html

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 
       <div class="profile">
         <h2 class="topText">Profile</h2>
-        <img src="image/2025Top1.jpg" class="topImage">
+        <img src="image/2024Top1.jpg" class="topImage">
         <div class="ploD">
           <p class="ploP">
             私たちEdel Röte Jazz Orchester（通称：え～でる）は名古屋大学軽音楽部ジャズセクションに所属する団体で、ビッグバンド形態のジャズの演奏を中心として活動しています。<br>
@@ -471,7 +471,7 @@
           </div>
           <div class="X">
             <a href="https://twitter.com/Edel_Rote_Jazz_" target="_blank">
-              <i class="fab fa-X"></i>
+              <i class="fab fa-twitter"></i>
               <p>X</p>
             </a>
           </div>
