correct index.html

--- a/index.html
+++ b/index.html
@@ -469,9 +469,9 @@
               <p>Instagram</p>
             </a>
           </div>
-          <div class="X">
+          <div class="Twitter">
             <a href="https://twitter.com/Edel_Rote_Jazz_" target="_blank">
-              <i class="fab fa-twitter"></i>
+              <i class="fab fa-Twitter"></i>
               <p>X</p>
             </a>
           </div>
