--- a/index.html
+++ b/index.html
@@ -469,10 +469,10 @@
               <p>Instagram</p>
             </a>
           </div>
-          <div class="Twitter">
+          <div class="twitter">
             <a href="https://twitter.com/Edel_Rote_Jazz_" target="_blank">
-              <i class="fab fa-Twitter"></i>
-              <p>X</p>
+              <i class="fab fa-twitter"></i>
+              <p>twitter</p>
             </a>
           </div>
           <div class="youtube">
