--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <script type="text/javascript" src="js/slick.min.js"></script>
 
   <!-- font awesome　の使用 -->
-  <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
