--- a/link/link.html
+++ b/link/link.html
@@ -112,7 +112,7 @@
             <a href="http://www.nagoya-bluenote.com/" target="_blank">blue note nagoya</a>
               残念ながらなくなってしまいました泣
             <br>
-            <a href="https://www.goodncool.nagoya/" target="_blank">good'n cool</a>
+            <a href="https://www.goodncool.nagoya/" target="_blank">Good'n Cool</a>
             　ライブでお世話になりました。
             <br>
             <a href="https://www.imago-jazz.com/" target="_blank">ライブハウスImago</a>
