--- a/schedule/2024.html
+++ b/schedule/2024.html
@@ -111,7 +111,7 @@
 			</tr>
 			<tr>
 				<td class="date-field">12月7日(土)</td>
-				<td class="event-field">対バンvs 岐阜大学New Stars Jazz Orchestra<br>@ドリームシアター岐阜</td>
+				<td class="event-field">対バンvs.岐阜大学New Stars Jazz Orchestra<br>@ドリームシアター岐阜</td>
 				<td class="note-field">-</td>
 			</tr>
 			<tr>
