--- a/schedule/schedule.html
+++ b/schedule/schedule.html
@@ -128,7 +128,91 @@
                   </td>
                   <td class="scheP">
                       <p>
-                          Summer Concert 2025 @B.STUDIO ROUTE23 / JB HALL
+                          Summer Concert 2025 @JB.STUDIO ROUTE23 / JB HALL
+                      </p>
+                  </td>
+              </tr>
+              <!-- ここまでコピペ -->
+              <!-- ここから -->
+              <tr>
+                  <td class="scheDate">
+                      9月15日(月)<br>
+                  </td>
+                  <td class="scheP">
+                      <p>
+                          今池ビッグバンドフェスティバル　@今池ガスホール
+                      </p>
+                  </td>
+              </tr>
+              <!-- ここまでコピペ -->
+              <!-- ここから -->
+              <tr>
+                  <td class="scheDate">
+                      10月11日(土)<br>
+                  </td>
+                  <td class="scheP">
+                      <p>
+                          対バンvs.立命館大学Σ Spirits Jazz Society　@Good'n Cool
+                      </p>
+                  </td>
+              </tr>
+              <!-- ここまでコピペ -->
+              <!-- ここから -->
+              <tr>
+                  <td class="scheDate">
+                      11月8日(土)<br>
+                  </td>
+                  <td class="scheP">
+                      <p>
+                          Basie祭　@クラブ月世界
+                      </p>
+                  </td>
+              </tr>
+              <!-- ここまでコピペ -->
+              <!-- ここから -->
+              <tr>
+                  <td class="scheDate">
+                      11月16日(日)<br>
+                  </td>
+                  <td class="scheP">
+                      <p>
+                          東海　Big Band Contest　@アイプラザ一宮
+                      </p>
+                  </td>
+              </tr>
+              <!-- ここまでコピペ -->
+              <!-- ここから -->
+              <tr>
+                  <td class="scheDate">
+                      12月6日(土)<br>
+                  </td>
+                  <td class="scheP">
+                      <p>
+                          対バンvs.岐阜大学New Stars Jazz Orchestra　vs.愛知大学Blue Stars Jazz Orchestra　@ドリームシアター岐阜
+                      </p>
+                  </td>
+              </tr>
+              <!-- ここまでコピペ -->
+              <!-- ここから -->
+              <tr>
+                  <td class="scheDate">
+                      12月13日(土)<br>
+                  </td>
+                  <td class="scheP">
+                      <p>
+                          対バンvs.立命館大学R.U.Swingin' Herd Jazz Ensemble　@JB.STUDIO ROUTE23 / JB HALL
+                      </p>
+                  </td>
+              </tr>
+              <!-- ここまでコピペ -->
+              <!-- ここから -->
+              <tr>
+                  <td class="scheDate">
+                      2026年2月22日(日)<br>
+                  </td>
+                  <td class="scheP">
+                      <p>
+                          第60回定期演奏会　@今池ガスホール
                       </p>
                   </td>
               </tr>
